src/css/App.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
    font-family: GAU_CUBE;
    src: url(/GAU_CUBE.TTF);
}

@font-face {
    font-family: Poppins;
    src: url(/Poppins-Regular.ttf);
}

@font-face {
    font-family: GAU_CUBE_R;
    src: url(/GAU_CUBE_R.TTF);
}

body {
    @apply bg-white dark:bg-black transition-all dark:text-white;
    @apply bg-gradient-to-t from-indigo-900/25 to-black;
    background-attachment: fixed;
    --nav-height: 13vh;
    font-family: Poppins, serif !important;
    padding-top: var(--nav-height);
    * {
        @apply transition-all;
    }
    user-select: none;
}

h1 {
    @apply text-transparent bg-clip-text;
    @apply bg-gradient-to-t from-purple-900 to-cyan-600;
}

#root {
    @apply h-screen w-auto;
}

.AppBackgroundImage {
    z-index: -1;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center;
}

/* Scrollbar */

::-webkit-scrollbar {
    @apply hidden w-1;
}

::-webkit-scrollbar-track {
    background: #2c2c2c;
}

::-webkit-scrollbar-thumb {
    background: #3484fc;
    border-radius: 10px;
}

.titlebar {
    @apply flex justify-end h-8 fixed inset-x-0 top-0 select-none;
    @apply bg-gradient-to-r from-slate-900 to-slate-800;
    z-index: 10000;
}

.titlebar-button {
    @apply inline-flex items-center justify-center h-8 w-8 self-center;
    &:hover {
        cursor: pointer;
        background: #3484fc;
    }
}

.nav--hidden {
    transform: translateY(calc(-1vh * var(--nav-height)));
    box-shadow: none;
}

.ContentContainer {
    @apply m-auto overflow-y-auto;
    padding-bottom: 20%;
    max-width: 1000px;
}

.result-title {
    @apply overflow-hidden;
    white-space: nowrap;
    width: 800px;

    &:not(:hover) {
        text-overflow: ellipsis;
    }

    a {
        &:hover,
        &:focus {
            span {
                animation: scroll-text 9s 0s infinite;
                display: inline-block;
                color: #3484fc;
                cursor: pointer;
            }
        }
    }

    @keyframes scroll-text {
        0% {
            transform: translateX(0%);
        }
        90% {
            transform: translateX(-100%);
        }
        95% {
            transform: translateX(0%);
        }
        100% {
            transform: translateX(0%);
        }
    }
}

.clearTop {
    clear: both;
    height: 30px;
}

.clearBottom {
    clear: both;
    height: 105px;
}

.navi-links > * {
    @apply text-indigo-900 transition-all;
    &:hover {
        @apply text-indigo-600;
    }
}

.dropdown-content p {
    color: white;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    background-color: #272d41;
    font-size: 15px;
}

.dropdown-content p:hover {
    cursor: pointer;
    background-color: #1e293b;
}

.show {
    display: block;
}

/* MODALS */
.Modal {
    display: none;
    position: fixed;
    z-index: 10000000000 !important;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.4);
}

.ModalBody {
    background-color: #181c3b;
    margin: 15% auto;
    padding: 20px;
    border: 2px solid #12326e;
    border-radius: 10px;
    width: 500px;

    h2 {
        font-size: 20px;
        color: #fff;
        margin-bottom: 20px;
        text-align: left;
    }

    p {
        text-align: left;
        font-size: 16px;
        color: #dcdcdc;
        margin-bottom: 10px;
        margin-top: 20px;
    }

    img {
        width: 100%;
        height: 100%;
        margin-bottom: 10px;
    }

    input {
        width: 100%;
        height: 40px;
        border-radius: 5px;
        border: 1px solid #12326e;
        padding: 10px;
        font-size: 16px;
        color: #fff;
        background: #181c3b;
        margin-bottom: 10px;

        &:focus {
            outline: none;
        }
    }

    input[type="checkbox"] {
        width: 30px;
        height: 30px;
        accent-color: #2980b9;

        &:hover {
            cursor: pointer;
        }
    }

    textarea {
        margin-bottom: 10px;
        width: 100%;
        height: 100px;
        border-radius: 5px;
        border: 1px solid #12326e;
        padding: 10px;
        font-size: 16px;
        color: #fff;
        background: #181c3b;

        &:focus {
            outline: none;
        }
    }

    select {
        background-color: #12326e;
        width: 100%;
        text-align: center;
        padding: 10px;
        border-radius: 5px;
    }
}

.CloseModal {
    color: #aaa;
    position: absolute;
    margin-top: -20px;
    margin-left: 440px;
    font-size: 40px;
    font-weight: bold;
}

.CloseModal:hover,
.CloseModal:focus {
    color: #ffffff;
    text-decoration: none;
    cursor: pointer;
}

.ModalSubmit {
    width: 100%;
    height: 40px;
    border-radius: 5px;
    border: 1px solid #12326e;
    padding: 10px 0 33px 0;
    font-size: 16px;
    color: #fff;
    background: #181c3b;
    margin-top: 20px;
    cursor: pointer;

    &:hover {
        background-color: #12326e;
    }
}

